<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CebancBurger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_cliente">Escribe tus datos</string>
    <string name="escribe_nombre">Su nombre&#8230;</string>
    <string name="escribe_direccion">su dirección&#8230;</string>
    <string name="escribe_telefono">y su teléfono.</string>
    <string name="siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="titulo_burger">Elige tu Burger</string>
    <string name="titulo_bebida">¿Y para acompañar?</string>
    <string name="anadir">Añadir</string>
    <string name="cantidad">Cantidad</string>
    <string name="title_activity_order_revision">CebancBurger</string>
    <string name="titulo_pedido">Revisa que no se nos haya escapado nada</string>
    <string name="precio_final">Precio final:</string>
    <string name="regalos">Regalos:</string>
    <string name="atras">Atrás</string>
    <string name="enviar">Enviar pedido</string>
    <string name="logo_des">App logo</string>
    <string name="delete_instructions">Mantén pulsada una tarjeta para eliminarla del pedido.</string>
    <string name="titulo_login">¿Quién eres?</string>
    <string name="username">Nombre de usuario&#8230;</string>
    <string name="password">&#8230;y contraseña</string>
    <string name="tituloMantenimiento">Mantenimiento</string>
    <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="userAddTitle">Usuario</string>
    <string name="userAddUsername">Nombre de usuario</string>
    <string name="userAddPassword">Contraseña</string>
    <string name="admin">Administrador</string>
    <string name="customerAddTitle">Cliente</string>
    <string name="customerAddName">Nombre</string>
    <string name="customerAddIDChar">Letra DNI</string>
    <string name="customerAddAddress">Dirección</string>
    <string name="viewPedidoTitle">Pedidos</string>
    <string name="aceptar">Aceptar</string>
    <string name="telefono">Telefono</string>
    <string name="borrarSeleccion">Borrar Selección</string>
    <string name="filtrar">Filtrar</string>
    <string name="fecha1">Fecha 1</string>
    <string name="fecha2">Fecha 2</string>
    <string name="listarPedidos">Listar Pedidos</string>
    

    <string-array name="tipo_bebida">
        <item>Cola</item>
        <item>Limón</item>
        <item>Naranja</item>
        <item>Nestea</item>
        <item>Cerveza</item>
        <item>Agua</item>
    </string-array>
    <string-array name="tamano_burger">
        <item>Normal</item>
        <item>Whopper</item>
    </string-array>
    <string-array name="tipo_carne">
        <item>Buey</item>
        <item>Pollo</item>
        <item>Ternera</item>
    </string-array>
    <string-array name="tipo_burger">
        <item>Clásica</item>
        <item>Clásica con queso</item>
        <item>Doble con queso</item>
        <item>Vegetal</item>
        <item>Especial</item>
    </string-array>

    <string name="title_activity_final">FinalActivity</string>
    <string name="final_subtitle">Qué hambre, ¿verdad? Tranquilo, ¡pronto recibirá su comida!</string>
    <string name="final_title">¡Que Aproveche!</string>
    <string name="nuevo_pedido">Nuevo pedido</string>

</resources>